--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ httplib2==0.22.0
 httpx==0.27.2
 idna==3.10
 jiter==0.7.1
+lxml==5.3.0
 markdown2==2.5.1
 openai==1.55.0
 packaging==24.2
@@ -34,6 +35,7 @@ pydantic==2.10.1
 pydantic_core==2.27.1
 PyMuPDF==1.24.14
 pyparsing==3.2.0
+python-docx==1.1.2
 python-dotenv==1.0.1
 requests==2.32.3
 rsa==4.9
